# CStest

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CStest.py  README.md  a.py  mypy.ini  pyproject.toml  tox.ini
cstest/: CStest.py  constants.py  main.py
cstest/cli/: util.py
cstest/config/: core.py
cstest/content/: condition.py  context.py  effect.py  file.py  project.py  variable.py
cstest/content/condition/: condition.py  params.py
cstest/content/effects/: effect.py
cstest/content/errors/: error.py
cstest/content/files/: file.py
cstest/content/lines/: handler.py  line.py
cstest/content/processors/: processor.py
cstest/content/variable/: call_variable.py  constants.py  exceptions.py  validators.py  variable.py  variable_resolve.py
cstest/process/: orchestrate.py
cstest/processor/: game.py
cstest/project/: constants.py  project.py
tests/content/condition/: test_condition.py  test_params.py
tests/content/variable/: test_validators.py  test_variable_resolve.py
